Cambio color de tema a morado clásico (#6f42c1)

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#1976d2",
+  "theme_color": #6f42c1",
   "icons": [
     {
       "src": "192.png",
