ejorar el estado ofline

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Test JS con Eruda",
   "short_name": "JS Test",
   "description": "Una pequeña app web para probar JS y Eruda",
-  "start_url": "./index.html",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6f42c1",
